# ShopMind

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
client/ShopMind/: settings.gradle.kts
docs/: README_CN.md  design.md  highlights.md
scripts/: __init__.py  chat_cli.py  diag_search.py  ingest.py  postgres_init.sql  reset_demo.py  seed_users.py
server/: __init__.py  config.py  main.py
server/agent/: __init__.py  fallback_messages.py  orchestrator.py  session_state.py
server/api/: __init__.py  cart.py  catalog.py  chat.py  deps.py  order.py  product.py  profile.py  sse.py
server/cache/: __init__.py  in_memory.py  noop.py  protocol.py
server/domain/: __init__.py  types.py
server/indexing/: __init__.py  brand_aliases.py  brand_origins.py  ingest.py  manifest.py
server/llm/: __init__.py  agent_call.py  anthropic_client.py  caveats_extractor.py  planner.py  preference_extractor.py  reranker.py  review_sentiment.py  review_summarizer.py
server/rag/: __init__.py
server/storage/: __init__.py  catalog_repo.py  db.py  manifest_repo.py  models.py  user_repo.py  vector_index.py
server/tools/: __init__.py  _serializers.py  base.py  cart.py  compare.py  order.py  preference.py  recall.py  (+2 more)
tests/: conftest.py  eval.py  eval_cases.json  eval_judge.py  eval_metrics.py  eval_report.md  eval_report.py  eval_runner.py  test_chunk1_sanity.py  test_chunk2_sanity.py  test_chunk3_sanity.py  test_chunk4_sanity.py  test_chunk5_sanity.py  test_chunk6_sanity.py  test_eval_offline.py
(+76 files in other folders)
