[project]
name = "shopmind"
version = "0.1.0"
description = "RAG 多模态电商导购 AI Agent (字节跳动竞赛 V1)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ShopMind" }]

dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.3",
    "python-multipart>=0.0.12",

    # ORM + DB(Postgres + asyncpg)
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",

    # Validation + settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # LLM + Embedding
    "anthropic>=0.40.0",
    "openai>=1.55.0",

    # Vector + sparse retrieval
    "qdrant-client>=1.12.0",
    "fastembed>=0.4.0",
    "jieba>=0.42.1",

    # Utilities
    "structlog>=24.4.0",
    "cachetools>=5.5.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
